tests/snapshots/whitespace__complex_whitespace_control.snap
---
source: tests/whitespace.rs
expression: input
---
{%     if foo ~%}{{-    bar -}}{% else if  another   -%} nothing {%-   endif %}
