tests/snapshots/whitespace__nested_comments-2.snap
---
source: tests/whitespace.rs
expression: formatted_output
---
{#- Some {# Nested {#~ Comments #} +#} ~#}
