tests/snapshots/whitespace__nested_comments.snap
---
source: tests/whitespace.rs
expression: input
---
{#-   Some    {# Nested {#~   Comments #}   +#}    ~#}
