tests/snapshots/whitespace__simple_control-2.snap
---
source: tests/whitespace.rs
expression: formatted_output
---
{% if condition %}
  <p>Hello</p>
{% endif %}
