tests/snapshots/whitespace__simple_control.snap
---
source: tests/whitespace.rs
expression: input
---
{%   if condition %}<p>Hello</p>{% endif    %}
