tests/snapshots/whitespace__whitespace_control-2.snap
---
source: tests/whitespace.rs
expression: formatted_output
---
{% if foo %}
  {{- bar -}}
{% else if another -%}
nothing
{%- endif %}
