tests/snapshots/whitespace__whitespace_control.snap
---
source: tests/whitespace.rs
expression: input
---
{% if foo ~%}{{- bar -}}{% else if another -%} nothing {%- endif %}
