tests/snapshots/whitespace__with_html-2.snap
---
source: tests/whitespace.rs
expression: formatted_output
---
{% if foo %}
  {{ bar }}
{% else if another -%}
<p>nothing</p>
{%- endif %}
