tests/snapshots/whitespace__with_html.snap
---
source: tests/whitespace.rs
expression: input
---
{% if foo %} {{ bar }} {% else if another -%} <p>nothing   </p>{%- endif %}
